--- a/_pages/password.html
+++ b/_pages/password.html
@@ -82,7 +82,7 @@ permalink: /password/
 
     <script>
         function generatePassword() {
-            // Recuperar as preferências do usuário
+            // Retrieve user preferences
             const passwordLength = parseInt(document.getElementById("passwordLength").value);
             const includeSymbols = document.getElementById("includeSymbols").checked;
             const includeNumbers = document.getElementById("includeNumbers").checked;
@@ -91,7 +91,7 @@ permalink: /password/
             const excludeSimilar = document.getElementById("excludeSimilar").checked;
             const excludeAmbiguous = document.getElementById("excludeAmbiguous").checked;
 
-            // Definir os caracteres possíveis para cada categoria
+            // Define the possible characters for each category
             const symbols = "@#$%";
             const numbers = "1234567890";
             const lowercase = "abcdefghijkmnopqrstuvwxyz";
@@ -99,7 +99,7 @@ permalink: /password/
             const similarCharacters = "il1Lo0O";
             const ambiguousCharacters = "{}[]()/\\'\"`~,;:.<>";
 
-            // Concatenar os caracteres que serão usados para gerar a senha
+            // Concatenate the characters that will be used to generate the password
             let characters = "";
             if (includeSymbols) characters += symbols;
             if (includeNumbers) characters += numbers;
@@ -108,14 +108,14 @@ permalink: /password/
             if (excludeSimilar) characters = characters.replace(new RegExp("[" + similarCharacters + "]", "g"), "");
             if (excludeAmbiguous) characters = characters.replace(new RegExp("[" + ambiguousCharacters + "]", "g"), "");
 
-            // Gerar a senha aleatória
+            // Generate random password
             let generatedPassword = "";
             for (let i = 0; i < passwordLength; i++) {
                 const randomIndex = Math.floor(Math.random() * characters.length);
                 generatedPassword += characters.charAt(randomIndex);
             }
 
-            // Definir a senha gerada no campo de texto
+            // Set the generated password in the text field
             const generatedPasswordElement = document.getElementById("generatedPassword");
             generatedPasswordElement.value = generatedPassword;
 
