--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -336,6 +336,11 @@ permalink: /wordpress/
     <input type="checkbox" id="item45">
     <span>Previna a pesquisa de diretórios (<a href="/wp-htaccess/#prevent_index" target="_blank">.htaccess</a>)</span>
   </label>
+
+  <label>
+    <input type="checkbox" id="item45">
+    <span>Desabilite a numeração de usuários no WordPress (<a href="/wp-htaccess/#disable_enumeration" target="_blank">.htaccess</a>)</span>
+  </label>
   
   <label>
     <input type="checkbox" id="item46">
@@ -391,7 +396,16 @@ permalink: /wordpress/
     <input type="checkbox" id="item51">
     <span>Previna erros de 404 do Apache (<a href="/wp-htaccess/#prevent_overzealous" target="_blank">.htaccess</a>)</span>
   </label>
-  
+
+  <label>
+    <input type="checkbox" id="item51">
+    <span>Remova a assinatura do servidor (<a href="/wp-htaccess/#remove_signature" target="_blank">.htaccess</a>)</span>
+  </label>
+
+  <label>
+    <input type="checkbox" id="item51">
+    <span>Proteja o arquivo htaccess (<a href="/wp-htaccess/#protect_htaccess" target="_blank">.htaccess</a>)</span>
+  </label>
 
   <h2>Performance</h2>
 
@@ -402,12 +416,17 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item51">
-    <span>Habilite o gzip. (<a href="/wp-htaccess/#enable_gzip" target="_blank">.htaccess</a>)</span>
+    <span>Habilite o deflate (<a href="/wp-htaccess/#enable_deflate" target="_blank">.htaccess</a>)</span>
   </label>
 
   <label>
     <input type="checkbox" id="item51">
-    <span>Habilite o deflate (<a href="/wp-htaccess/#enable_deflate" target="_blank">.htaccess</a>)</span>
+    <span>Habilite o KeepAlive (<a href="/wp-htaccess/#enable_keepalive" target="_blank">.htaccess</a>)</span>
+  </label>
+
+  <label>
+    <input type="checkbox" id="item51">
+    <span>Habilite o Expires (<a href="/wp-htaccess/#enable_expires" target="_blank">.htaccess</a>)</span>
   </label>
 
   <label>
