--- a/_pages/password.html
+++ b/_pages/password.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Password Generator
+title: Gerador de senhas
 permalink: /password/
 ---
 
@@ -51,34 +51,34 @@ permalink: /password/
 <body>
     <div id="formContainer">
         <form class="form">
-            <label for="passwordLength">Password Length:</label>
+            <label for="passwordLength">Tamanho da senha:</label>
             <input type="number" id="passwordLength" min="8" max="64" value="16" required><br>
 
-            <label for="includeSymbols">Include Symbols:</label>
+            <label for="includeSymbols">Incluir símbolos:</label>
             <input type="checkbox" id="includeSymbols" checked><br>
 
-            <label for="includeNumbers">Include Numbers:</label>
+            <label for="includeNumbers">Incluir números:</label>
             <input type="checkbox" id="includeNumbers" checked><br>
 
-            <label for="includeLowercase">Include Lowercase Characters:</label>
+            <label for="includeLowercase">Incluir caracteres minúsculos:</label>
             <input type="checkbox" id="includeLowercase" checked><br>
 
-            <label for="includeUppercase">Include Uppercase Characters:</label>
+            <label for="includeUppercase">Incluir caracteres maiúsculos:</label>
             <input type="checkbox" id="includeUppercase" checked><br>
 
-            <label for="excludeSimilar">Exclude Similar Characters:</label>
+            <label for="excludeSimilar">Excluir caracteres semelhantes:</label>
             <input type="checkbox" id="excludeSimilar" checked><br>
 
-            <label for="excludeAmbiguous">Exclude Ambiguous Characters:</label>
+            <label for="excludeAmbiguous">Excluir caracteres ambíguos:</label>
             <input type="checkbox" id="excludeAmbiguous" checked><br>
 
-            <button type="button" onclick="generatePassword()" id="buttoGenerate">Generate Password</button>
+            <button type="button" onclick="generatePassword()" id="buttoGenerate">Gerar senha</button>
         </form>
     </div>
 
-    <label for="generatedPassword">Your New Password:</label>
+    <label for="generatedPassword">Sua nova senha:</label>
     <input type="text" id="generatedPassword" readonly>
-    <button id="copyButton" onclick="copyPassword()">Copy</button>
+    <button id="copyButton" onclick="copyPassword()">Copiar</button>
 
     <script>
         function generatePassword() {
@@ -126,7 +126,7 @@ permalink: /password/
             generatedPasswordElement.select();
             document.execCommand("copy");
 
-            alert("Password copied to clipboard!");
+            alert("Senha copiada para a área de transferência!");
         }
     </script>
 </body>
