--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -436,6 +436,11 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox">
+    <span>Habilite o brotli (<a href="https://github.com/google/brotli" target="_blank">Htaccess: Código</a>)</span>
+  </label>
+
+  <label>
+    <input type="checkbox">
     <span>Habilite o deflate para arquivos estáticos (<a href="/wp-htaccess/#enable_deflate" target="_blank">Htaccess: Código</a>)</span>
   </label>
 
