--- a/_pages/password.html
+++ b/_pages/password.html
@@ -4,130 +4,4 @@ title: Gerador de senhas
 permalink: /password/
 ---
 
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        body {
-            text-align: center;
-            margin: 0;
-        }
-        label {
-            display: inline-block;
-            width: 300px;
-        }
-        input[type="checkbox"], input[type="text"] {
-            margin-bottom: 10px;
-        }
-
-        #formContainer {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            text-align: -webkit-auto;
-            font-size: 14px;
-        }
-
-        .form {
-            text-align: left;
-        }
-
-        #buttoGenerate {
-            margin-top: 20px;
-            padding: 10px;
-        }
-
-        #generatedPassword {
-            font-weight: bold;
-            margin-top: 20px;
-            padding: 10px;
-        }
-        #copyButton {
-            margin-top: 10px;
-            padding: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div id="formContainer">
-        <form class="form">
-            <label for="passwordLength">Tamanho da senha:</label>
-            <input type="number" id="passwordLength" min="8" max="64" value="16" required><br>
-
-            <label for="includeSymbols">Incluir símbolos:</label>
-            <input type="checkbox" id="includeSymbols" checked><br>
-
-            <label for="includeNumbers">Incluir números:</label>
-            <input type="checkbox" id="includeNumbers" checked><br>
-
-            <label for="includeLowercase">Incluir caracteres minúsculos:</label>
-            <input type="checkbox" id="includeLowercase" checked><br>
-
-            <label for="includeUppercase">Incluir caracteres maiúsculos:</label>
-            <input type="checkbox" id="includeUppercase" checked><br>
-
-            <label for="excludeSimilar">Excluir caracteres semelhantes:</label>
-            <input type="checkbox" id="excludeSimilar" checked><br>
-
-            <label for="excludeAmbiguous">Excluir caracteres ambíguos:</label>
-            <input type="checkbox" id="excludeAmbiguous" checked><br>
-
-            <button type="button" onclick="generatePassword()" id="buttoGenerate">Gerar senha</button>
-        </form>
-    </div>
-
-    <label for="generatedPassword">Sua nova senha:</label>
-    <input type="text" id="generatedPassword" readonly>
-    <button id="copyButton" onclick="copyPassword()">Copiar</button>
-
-    <script>
-        function generatePassword() {
-            // Retrieve user preferences
-            const passwordLength = parseInt(document.getElementById("passwordLength").value);
-            const includeSymbols = document.getElementById("includeSymbols").checked;
-            const includeNumbers = document.getElementById("includeNumbers").checked;
-            const includeLowercase = document.getElementById("includeLowercase").checked;
-            const includeUppercase = document.getElementById("includeUppercase").checked;
-            const excludeSimilar = document.getElementById("excludeSimilar").checked;
-            const excludeAmbiguous = document.getElementById("excludeAmbiguous").checked;
-
-            // Define the possible characters for each category
-            const symbols = "@#$%";
-            const numbers = "1234567890";
-            const lowercase = "abcdefghijkmnopqrstuvwxyz";
-            const uppercase = "ABCDEFGHJKLMNPQRSTUVWXYZ";
-            const similarCharacters = "il1Lo0O";
-            const ambiguousCharacters = "{}[]()/\\'\"`~,;:.<>";
-
-            // Concatenate the characters that will be used to generate the password
-            let characters = "";
-            if (includeSymbols) characters += symbols;
-            if (includeNumbers) characters += numbers;
-            if (includeLowercase) characters += lowercase;
-            if (includeUppercase) characters += uppercase;
-            if (excludeSimilar) characters = characters.replace(new RegExp("[" + similarCharacters + "]", "g"), "");
-            if (excludeAmbiguous) characters = characters.replace(new RegExp("[" + ambiguousCharacters + "]", "g"), "");
-
-            // Generate random password
-            let generatedPassword = "";
-            for (let i = 0; i < passwordLength; i++) {
-                const randomIndex = Math.floor(Math.random() * characters.length);
-                generatedPassword += characters.charAt(randomIndex);
-            }
-
-            // Set the generated password in the text field
-            const generatedPasswordElement = document.getElementById("generatedPassword");
-            generatedPasswordElement.value = generatedPassword;
-
-        }
-
-        function copyPassword() {
-            const generatedPasswordElement = document.getElementById("generatedPassword");
-            generatedPasswordElement.select();
-            document.execCommand("copy");
-
-            alert("Senha copiada para a área de transferência!");
-        }
-    </script>
-</body>
-</html>
+Veja em <a href="https://zendev.com.br/tool/password">https://zendev.com.br/tool/password</a>
